--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -25,7 +25,7 @@
     background: #f2f4f5;
     transition: all .4s;
 
-    img {
+    &-img {
       width: 40px;
       height: 40px;
       margin: 0 0.7rem;
