--- a/src/container/Testimonials/Testimonials.scss
+++ b/src/container/Testimonials/Testimonials.scss
@@ -14,7 +14,7 @@
   box-shadow: 0 0 30px rgba(0,0,0,.1);
   transition: all .4s ease-in-out;
 
-  img {
+  &-img {
     width: 100px;
     height: 100px;
     border-radius: 50%;
